--- a/todoList/package.json
+++ b/todoList/package.json
@@ -26,7 +26,10 @@
         "webpack-cli": "^4.9.0"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.6.1",
+        "js-cookie": "^3.0.1",
         "vue": "^2.6.14",
+        "vue-meta": "^2.4.0",
         "vue-router": "^3.5.2"
     }
 }
